--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
 <footer class="bottom" >
     <a class="navbar-brand" href="#">
-        <img src="../../assets/images/logo.png" alt="" style="height: 40px;  ">
+        <img src="./assets/images/logo.png" alt="" style="height: 40px;  ">
     </a>
       <h2 style="font-family: 'Times New Roman', Times, serif;">PanduBroker.com</h2>
       
