--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <nav class="navbar navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../assets/images/logo.png" alt="" style="height: 40px; ">
+                    <img src="./assets/images/logo.png" alt="" style="height: 40px; ">
                 </a>
                 <h2 style="font-family: 'Times New Roman', Times, serif;">PanduBroker.com</h2> &nbsp;&nbsp;&nbsp;&nbsp;
             <div class="menu" style="display: flex; font-family: 'Times New Roman', Times, serif; ">
