--- a/src/app/section/pages/sell/sell.component.html
+++ b/src/app/section/pages/sell/sell.component.html
@@ -1,7 +1,7 @@
 <div class="section1">
     <div class="card-deck">
         <div class="card">
-          <img class="card-img-top" src="../../../../assets/images/img/property-1.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./assets/images/img/property-1.jpg" alt="Card image cap">
           <span class="badge badge-primary" style="position: absolute; top: 10px; right: 10px;">For Sale</span>
           <address style="font-weight: 600;"> 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="../../../../assets/images/img/property-2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./assets/images/img/property-2.jpg" alt="Card image cap">
           <span class="badge badge-primary" style="position: absolute; top: 10px; right: 10px;">For Sale</span>
           <address style="font-weight: 600;"> 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
@@ -40,7 +40,7 @@
         </div>
         <div class="card">
           
-          <img class="card-img-top" src="../../../../assets/images/img/property-3.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./assets/images/img/property-3.jpg" alt="Card image cap">
             <span class="badge badge-primary" style="position: absolute; top: 10px; right: 10px;">For Sale</span>
             <address style="font-weight: 600;"> 
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
