--- a/src/app/section/pages/home/home.component.html
+++ b/src/app/section/pages/home/home.component.html
@@ -23,7 +23,7 @@
       </div>
 
       <figure class="hero-banner">
-        <img src="../../../../assets/images/img/hero-banner.png" alt="Modern house model" class="w-100">
+        <img src="./assets/images/img/hero-banner.png" alt="Modern house model" class="w-100">
       </figure>
 
     </div>
