--- a/src/app/section/pages/rent/rent.component.html
+++ b/src/app/section/pages/rent/rent.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <img
         class="card-img-top"
-        src="../../../../assets/images/img/property-4.png"
+        src="./assets/images/img/property-4.png"
         alt="Card image cap"
       />
       <div class="badge">Sell</div>
@@ -25,7 +25,7 @@
     <div class="card">
         <img
           class="card-img-top"
-          src="../../../../assets/images/img/property-3.jpg"
+          src="./assets/images/img/property-3.jpg"
           alt="Card image cap"
         />
         <div class="badge">Sell</div>
@@ -47,7 +47,7 @@
       <div class="card">
         <img
           class="card-img-top"
-          src="../../../../assets/images/img/property-2.jpg"
+          src="./assets/images/img/property-2.jpg"
           alt="Card image cap"
         />
         <div class="badge">Sell</div>
