--- a/src/app/section/pages/services/services.component.html
+++ b/src/app/section/pages/services/services.component.html
@@ -3,7 +3,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
         <div class="card h-100">
-            <img src="../../../../assets/images/img/service-1.png" class="card-img-top" alt="...">
+            <img src="./assets/images/img/service-1.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h3 class="h3 card-title">
                     <a href="#" [routerLink]="['/buy']">Buy a home</a>
