--- a/src/app/section/section.component.html
+++ b/src/app/section/section.component.html
@@ -1,7 +1,7 @@
 <div class="section1">
 <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" src="../../assets/images/home images/1.jpeg" alt="Card image cap">
+      <img class="card-img-top" src="./assets/images/home images/1.jpeg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../../assets/images/home images/2.jpeg" alt="Card image cap">
+      <img class="card-img-top" src="./assets/images/home images/2.jpeg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="../../assets/images/home images/3.jpeg" alt="Card image cap">
+      <img class="card-img-top" src="./assets/images/home images/3.jpeg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
