--- a/src/app/section/pages/services/services.component.html
+++ b/src/app/section/pages/services/services.component.html
@@ -25,7 +25,7 @@
      
       <div class="col">
         <div class="card h-100">
-            <img src="../../../../assets/images/img/service-2.png" class="card-img-top" alt="...">
+            <img src="./assets/images/img/service-2.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h3 class="h3 card-title">
                     <a href="#" [routerLink]="['/rent']">Rent a home</a>
@@ -47,7 +47,7 @@
 
     <div class="col">
         <div class="card h-100">
-            <img src="../../../../assets/images/img/service-3.png" class="card-img-top" alt="...">
+            <img src="./assets/images/img/service-3.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h3 class="h3 card-title">
                     <a href="#" [routerLink]="['/sell']">Sell a home</a>
